exports[`<ValidatedTextField /> renders without crashing 1`] = `
<TextField
  className="validated-text-field"
  disabled={false}
  errorText=""
  floatingLabelFixed={false}
  floatingLabelText="login"
  fullWidth={false}
  multiLine={false}
  rows={1}
  type="text"
  underlineShow={true} />
`;

exports[`<ValidatedTextField /> should not display error when showValidationError is false 1`] = `
<TextField
  className="validated-text-field"
  disabled={false}
  errorText=""
  floatingLabelFixed={false}
  floatingLabelText="login"
  fullWidth={false}
  multiLine={false}
  onChange={[Function]}
  rows={1}
  type="text"
  underlineShow={true} />
`;
